--- a/src/components/JobSearch.css
+++ b/src/components/JobSearch.css
@@ -1,53 +1,50 @@
 #wrapper {
     width: 100%;
-    margin:0 auto;
-  }
-  .App {
+    margin: 0 auto;
+}
+.App {
     text-align: center;
-  padding-right: 200px;
-  padding-left: 50px;
-  padding-top: 50px;
-  padding-bottom: 300px;
-  background-image: url("bg1.jpg");
-  background-size:cover;
-  background-repeat:no-repeat; 
-    
-  }
-  
+    padding-right: 200px;
+    padding-left: 50px;
+    padding-top: 50px;
+    padding-bottom: 300px;
+    background-image: url("../assets/images/bg1.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
 
-  .listing {
+.listing {
     text-align: center;
     /*padding-right: 50px;
     padding-left: 50px;
     padding-top: 50px;*/
     padding-bottom: 300px;
     background-color: lightgray;
-    background-size:cover;
-  }
-  
-  .App-logo {
+    background-size: cover;
+}
+
+.App-logo {
     height: 8vmin;
     width: 8vmin;
-    align-items: flex-end;
-  }
-  
-  .forma {
+    align-items: flex-end;
+}
+
+.forma {
     text-align: center;
     justify-content: center;
     padding-right: 90px;
     padding-left: 90px;
     padding-top: 50px;
     padding-bottom: 50px;
-    background: radial-gradient(rgb(235, 239, 239),rgb(87, 180, 199));
-  }
-  
+    background: radial-gradient(rgb(235, 239, 239), rgb(87, 180, 199));
+}
 
-  .container {
+.container {
     display: flex;
     justify-content: center;
-  }
-  
-  header {
+}
+
+header {
     width: 100%;
     height: 85px;
     overflow: hidden;
@@ -56,21 +53,20 @@
     left: 0;
     z-index: 999;
     background-color: black;
-    }
-  header h1#logo {
+}
+header h1#logo {
     display: inline-block;
     height: 85px;
     line-height: 85px;
-    float: left;
     font-size: 25px;
     color: purple;
     font-weight: 500;
-  }
-  
-  #input-field {
-    background-color: rgba(255,255,255,0.1);
+}
+
+#input-field {
+    background-color: rgba(255, 255, 255, 0.1);
     border-radius: 5px;
     width: 150px;
     height: 40px;
     padding: 5px;
-  }
+}
